--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   connectivity_plus: ^5.0.2
 
+  intl: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
