--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  carousel_slider: ^4.0.0
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
   provider: ^6.0.0  
