--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   connectivity_plus: ^5.0.2
   http: ^1.1.2
+  shared_preferences: ^2.0.13
 
   intl: any
 dev_dependencies:
